# Sintelli-BaseCode-v1

./: .clangd  .gitignore  CMakeLists.txt  GPUMutex.cu  HUGGINGFACE_RAG_INTEGRATION.md  KFEManager.h  Neuron.cu  NeuronModel.cu  NeuronSingleStep.cu  NeuronSingleStepInterface.h  PROJECT_SUMMARY.md  README.md  TECHNICAL_DOCUMENTATION.md  bpe_tokenizer.cpp  central_router.cpp  cern.cuh  complete_rag_integration.cpp  conv16_res_msg.cuh  converter.cpp  converter.h  cost_optimized_loader.cpp  demo_rag_enhanced.cpp  demo_rag_logic_integration.cpp  deviceQueue.cpp  dslzma.h  example_external_storage_api.cpp  example_logic_injection.cpp  example_semantic_search.cpp  export_e5_large.py  external_storage.h  external_storage_api.h  feature_extractor.cpp  feature_extractor.h  feature_matching_verification.cpp  gpu_containers.cuh  hasher.h  huggingface_rag_integration.cpp  huggingface_streaming.py  isw.hpp  lightweight_dataset_loader.cpp  (+48 more)
.github/: FUNDING.yml
.github/workflows/: analsys.yml  build.yaml  ci.yml  doc.yml  issue_killer.yml  issue_triage.yml  pr_review.yml  qodana_code_quality.yml  release.yml
models/: merges.txt  special_tokens.json  vocab.json
models/e5/: e5_large.onnx
test-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_simple.sln  test_simple.vcxproj  test_simple.vcxproj.filters
test-build/Debug/: test_simple.exp  test_simple.lib
test-build/test_simple.dir/Debug/: test_simple.cu-1243295240.deps  test_simple.cu.cache  test_simple.exe.recipe  test_simple.ilk
test-build/test_simple.dir/Debug/test_simple.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
test-build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
test-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test-build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
test-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
zmq/: CMakeLists.txt
zmq/tests/: CMakeLists.txt
zmq/unittests/: CMakeLists.txt
